--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,10 +1,43 @@
-pip==23.3
+alabaster==0.7.16
+babel==2.16.0
 bump2version==0.5.11
-wheel==0.38.1
-watchdog==0.9.0
-flake8==3.7.8
-tox==3.14.0
-coverage==4.5.4
-Sphinx==1.8.5
-twine==1.14.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
 Click==7.0
+coverage==4.5.4
+distlib==0.3.8
+docutils==0.21.2
+entrypoints==0.3
+filelock==3.15.4
+flake8==3.7.8
+idna==3.8
+imagesize==1.4.1
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+mccabe==0.6.1
+nh3==0.2.18
+packaging==24.1
+pkginfo==1.11.1
+platformdirs==4.2.2
+pluggy==0.13.1
+py==1.11.0
+pycodestyle==2.5.0
+pyflakes==2.1.1
+Pygments==2.18.0
+readme_renderer==44.0
+requests==2.32.3
+requests-toolbelt==1.0.0
+setuptools==74.1.2
+six==1.16.0
+snowballstemmer==2.2.0
+Sphinx==1.8.5
+sphinxcontrib-serializinghtml==2.0.0
+sphinxcontrib-websupport==1.2.4
+toml==0.10.2
+tox==3.14.0
+tqdm==4.66.5
+twine==1.14.0
+urllib3==2.2.2
+virtualenv==20.26.3
+watchdog==5.0.2
+wheel==0.38.1
