--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -4,9 +4,11 @@ attrs==24.2.0
 babel==2.16.0
 bump2version==0.5.11
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.3.2
 Click==7.0
 coverage==4.5.4
+cryptography==43.0.1
 distlib==0.3.8
 docutils==0.21.2
 elevate==0.1.3
@@ -16,24 +18,37 @@ filelock==3.15.4
 flake8==3.7.8
 idna==3.8
 imagesize==1.4.1
+importlib_metadata==8.4.0
 iniconfig==2.0.0
+jaraco.classes==3.4.0
+jaraco.context==6.0.1
+jaraco.functools==4.0.2
+jeepney==0.8.0
 Jinja2==3.1.4
+keyring==25.3.0
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mccabe==0.6.1
+mdurl==0.1.2
+more-itertools==10.5.0
 nh3==0.2.18
--e git+ssh://git@github.com/mroavi/onthefly.git@831cdad01e9b9c93893a5f38030e54b1b097fdf3#egg=onthefly
+-e git+ssh://git@github.com/mroavi/onthefly.git@ec932dd83ab6deea9b5d98d87bcbc51dd6e67952#egg=onthefly
 packaging==24.1
-pkginfo==1.11.1
+pkginfo==1.10.0
 platformdirs==4.2.2
 pluggy==0.13.1
 py==1.11.0
 pycodestyle==2.5.0
+pycparser==2.22
 pyflakes==2.1.1
 Pygments==2.18.0
 pytest==7.2.0
 readme_renderer==44.0
 requests==2.32.3
 requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==13.8.0
+SecretStorage==3.3.3
 setuptools==74.1.2
 six==1.16.0
 snowballstemmer==2.2.0
@@ -43,8 +58,9 @@ sphinxcontrib-websupport==1.2.4
 toml==0.10.2
 tox==3.14.0
 tqdm==4.66.5
-twine==1.14.0
+twine==5.1.1
 urllib3==2.2.2
 virtualenv==20.26.3
 watchdog==5.0.2
 wheel==0.38.1
+zipp==3.20.1
